--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -4,9 +4,9 @@ No-Analogues in North American Pollen Space
 Abstract
 ------------------------
 
-* Most studies of novelty look for novelty relative to present day, whether looking for novelty in the past or potential novelty in the future.  But we are concerned about novelty during 21st century, where modern communities dis-aggregate, and we are challenged to understand which of these novel communities will be stable (equilibrial novelty) in the future, and which will remain in a state of transition (disequilibrial).
+Most studies of novelty look for novelty relative to present day ecosystems, whether looking for novelty in the past or potential novelty in the future.  But we are concerned about novelty during 21st century, where modern communities dis-aggregate, and we are challenged to understand which of these novel communities will be stable (equilibrial novelty) in the future, and which will remain in a state of transition (disequilibrial).
 
-General paradigm that species respond individualistically to climate change.  But this isn’t necessarily always the case.  At some time scales whole communities appear to move, while in others clear individualistic responses are visible.  Under what conditions do we see new communities arise?  When do communities persist?
+The general (Gleasonian) paradigm is that species respond individualistically to climate change,  but in practice, those individualistic responses often result in the movement of entire communities across the landscape.  At some time scales whole communities appear to move, while in others clear individualistic responses are visible.  Under what conditions do we see new communities arise?  When do communities persist?
 
 Introduction
 ------------------------
@@ -14,27 +14,56 @@ Our investigation of non-analogue vegetation, both in the past and in the future
 
 Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
 
-In paleoecological analysis the use of squared chord dissimilarity is a common measure of dissimilarity between two pollen assemblages.  Each pollen assemblage represents regional and local vegetation surrounding the sample site, filtered through taphonomic processes (Jackson 2012?).  We can describe this dissimilarity from modern as the distance to the closest modern sample, $d_{mt}$.  Using $d_{m}$ we may then define 'non-analogue' communities as those which pass a certain threshold of minimum dissimilarity, here we use the 95 percentile of minimum distances.  A significant challenge to the use of modern dissimilarity measures is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Ambrosia point to significant opening of woodland canopies in North America for example [REF].  This effect can impact our interpretations of the relationships between pollen and various other factors such as climate (St. Jacques, the new chinese one).
+In paleoecological analysis the use of squared chord dissimilarity (Overpeck, 1984) is a common measure of dissimilarity between two pollen assemblages, and is simply an extension of Euclidean distance between two points in space.  Here the 'space' is the multivariate pollen assemblage, which is square root transformed to reduce the influence of taxa, such as *Pinus* that tend to be over-represented in assemblages.  Each pollen assemblage represents regional and local vegetation surrounding the sample site, filtered through taphonomic processes (Jackson 2012?).  We can describe this dissimilarity from modern as the distance to the closest modern sample, $d_{mt}$.  Using $d_{m}$ we may then define 'non-analogue' communities as those which pass a certain threshold of minimum dissimilarity, here we use the 95 percentile of minimum distances.  A significant challenge to the use of modern dissimilarity measures is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Ambrosia point to significant opening of woodland canopies in North America for example [REF].  This effect can impact our interpretations of the relationships between pollen and various other factors such as climate (St. Jacques, the new chinese one).
 
 A limitation of the use of dissimilarity from modern is that the dissimilarity of past pollen assemblages with respect to modern pollen cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low $d_{mt}$ value, provided near analogues exist in the modern pollen data.  To correct for this, we can examine measures of turnover with a single pollen record through time $d_{st}$, or site dissimilarity at time $t$.  This measures dissimilarity from one sample in a pollen record to the next, more modern sample, with high values for $d_{t}$ indicating much higher rates of vegetation turnover within cores.  Schuman et al. (ref) showed patterns of high within-core turnover, but there is a further element of turnover or change that has not been explored.  Ladnscape turnover $d_{lt}$ represents the novelty of a community on the observable landscape at some timepoint $t$.  This landscape turnover estimate allows us to capture the movement of communities or broadly based vegetation types across the landscape.  We can imagine times in the past where site turnover may be high, but landscape turnover may be low, for example, the movement of boreal type ecosystems across North America following deglaciation may result in high site turnover, but low landscape turnover.
 
-In the same way we can examine vegetation dissimilarity we can make use of transient climate models to use the same measures of dissimilarity for climate, here $c_{m}$, $c_{s}$ and $c_{l}$.
+We can then imagine a set of scenarios, illustrated by plotting the various combinations of 
 
+```{r fig.width=6, message=FALSE, echo=FALSE, warning=FALSE}
+
+library(ggplot2)
+
+data <- data.frame(x = rgamma(1000, shape = 1.5, rate = 1.5))
+
+data$y <- log(data$x + rnorm(1000, 0, 1))
+
+ggplot(data, aes(x = x, y = y)) + 
+  geom_point(alpha = 0.5) +
+  theme_bw() + 
+  geom_abline(intercept = 0, slope = 1, alpha = 0.4) +
+  scale_x_continuous(expand = c(0,0), limits = c(0,1)) +
+  scale_y_continuous(expand=c(0,0), limits = c(0,1)) +
+  annotate('text', x = 0.15, y = 0.1, label = 'Community\nPersistence', 
+           family = 'serif', size = 6, face = 'bold') +
+  annotate('text', x = 0.85, y = 0.9, label = 'Ecological\nNovelty', 
+           family = 'serif', size = 6, face = 'bold') +
+  annotate('text', x = 0.15, y = 0.9, label = 'Transient\nRefugium',
+           family = 'serif', size = 6, face = 'bold') +
+  annotate('text', x = 0.85, y = 0.1, label = 'Community\nMigration', 
+           family = 'serif', size = 6, face = 'bold') +
+  xlab('Site Turnover') + ylab('Landscape Turnover') +
+  theme(axis.title.x = element_text(family = 'serif', 
+                                    face = 'bold.italic', size = 18),
+        axis.title.y = element_text(family = 'serif', 
+                                    face = 'bold.italic', size = 18),
+        axis.ticks = element_blank(),
+        axis.text.x = element_blank(),
+        axis.text.y = element_blank())
+
+```
+
+**Figure X.**  *Models for understanding turnover and dissimilarity in the pollen record.  Community stability is represented by sites with low turnover relative to past assemblages at the site, and across the landscape.  Community migration occurs when a site is highly siddimilar to past assemblages at the site, but has close analogues in the past landscape.  Transient refugia occur when a site has low turnover, but becomes highly dissimilar from the past landscape.  Ecological novelty occurs when a site is dissimilar from both the landscape and its own past assemblages.*
+
+In the same way we can examine vegetation dissimilarity we can make use of transient climate models to use the same measures of dissimilarity for climate, here $c_{m}$ (dissimilarity from modern), $c_{s}$ (change at a site) and $c_{l}$ (change relative to landscape).
 
 **Table**. *Definitions for dissimilarity measures tested in this paper.*
+
 Dissimilarity Type | Definition
 ------------------ | -----------
 Transient novelty  | The dissimilarity measure between a pollen assemblage and all pollen assemblages between 250 and 500 years older, excepting samples from the site.
 Site turnover      | The dissimilarity measure between a pollen assemblage and all pollen assemblages from the same site between 250 and 750 years older.
 Persistence        | The dissimilarity measure between a pollen assemblage and future assemblages, between 250 and 750 years younger.
-
-A fuller understanding of vegetation change, and of successional processes may be derived from the use of multiple metrics for vegetation change using pollen data. Three dissimilarity measures can be used to help us understand changes through time:
-
-1.  Dissimilarity from modern.
-2.  Turnover with an individual core.
-3.  Turnover with respect to the surrounding landscape.
-
-Dissimilarity from modern has been widely used in the paleoecological literature, it represent a measure of how different past ecosystems were to modern.  High dissimilarities are most common in North America at ~14kyr, when it is presumed that a combination of climatic and biotic factors gave rise to new vegetation communities, communities that have no modern analogue.  Dissimilarity $d_m$ is commonly measured as the squared chord distance between a pollen assemblage and 
 
 Turnover within a core just tells you how different vegetation at a single site is from one time period is to the next, however it may be deceptively high, in regions where there is high spatial heterogeneity, or large shifts between pioneer and climax vegetation associations it might be possible to see large shifts in turnover, but little regional change.
 
@@ -43,6 +72,7 @@ Landscape turnover has not been previously used as a metric of dissimilarity.  I
 To assist in this endevour, we examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.  The conceptual framework suggests that we were looking at landscape level turnover, not site turnover.  While site-level turnover is a commonly used metric in paleoecological analysis, it is hampered by its sensitivity to stochastic effects.  Large scale changes in vegetation at a single site might not reflect the kinds of broad scale community change we expect to see under conditions of future climate change.  As such, comparing dissimilarity at a site to changes at a number of sites across the continent provides a better metric of landscape-scale dissimilarity.
 
 ![Alt text](/HandMadeFigures/ConceptualPlot.png)
+
 **Figure 1**. *Turnover estimates for time t_i are measured as the minimum within site dissimilarity from the prior timestep (d_si) or the minimum dissimilarity from the landscape of pollen assemblages at the earlier timestep (d_li).  In all cases the earlier timestep is defined as a time preiod between 250 and 750 years prior to the sample of interest.  These two values then form a continuum of possibilities.  High ds and low dl indicate disturbance events within a stable, heterogeneous landscape, high dl & high ds indicate broad-scale, rapid landscape turnover, high dl, low ds is relatively infrequent, but may indicate local refugia within a shifting landscape*
 
 We expect that ecosystems will show patterns of change that can be explained through the multivariate use of these dissimilarity measures.  For example, rapid species migration during the late-Pleistocene/eraly-Holocene transition should be apparent as high local turnover partnered with relatively low landscape change if entire communities are migrating northward.  Strongly individualistic species responses would be visible as paired high site and landscape turnovers.  Modern successional changes should be visible as sets of high self, low landscape changes.  Low landscape and low self changes should be static ecosystems.
@@ -86,14 +116,14 @@ bins <- ggplot(compiled.pollen) +
 
 grid.arrange(points, bins, ncol=2)
 
-rm(points, bins, ecoregions, map)
+rm(points, bins, map)
 ```
+
 **Figure 2**. *Sample plot locations and bin sizes for each age class*.
 
 Because sample size may affect our ability to calculate the 95% CI we also use the squared-chord dissimilarity estimate reported in Gill et al. (2009) of XXX as a secondary check.  This allows us to detect no-analogues using multiple methods.
 
 To determine dissimilarity ofver time we estimate dissimilarity from the data using a bootstrap approach for which a sample is compared against a 'landscape' of sites that are between 250 and 750 years older than the sample in question.  For any sample we first test whether a sample fom the site exists between 250 - 750 prior to the sample of interest.  This will prevent anomalously high analogue distances for sites that have never previously been sampled, particularly when they represent new ecoregions.  For each acceptable site we sample one assemblage from each site with samples in the previous 250 - 750 years.  This produces a single sample from each site in the previous time window from which we estimate the minimum suqared chord dissimilarity.  Since some sites have multiple samples in each 500 year time window we re-sample (with replacement) 100 times for each focal site, producing a sample of 100 minimum (squared-chord) dissimilarity values for each pollen assemblage at each site, for which there is a prior sample.
-
 
 ```{r bootstrapAnalogues, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -113,43 +143,79 @@ if(!'pollen.frame.RData' %in% list.files('data/output')){
 
 Results
 -------------------------
-Pollen samples:
-Of the `r length(unique(compiled.pollen$sitename))` pollen sites obtained from Neotoma for this analysis, `r length(unique(compiled.pollen$sitename[!is.na(rep.frame[,3])]))` sites had assemblages that met our criteria.  For these sites there were 18850 unique assemblages spanning the last 21kyr, approximately 90% of the total assemblages for the sites that met our criteria.  Samples excluded from analysis occur throughout the record
 
-Self and Landscape Dissimilarity:
+### Pollen samples:
+Of the `r length(unique(compiled.pollen$sitename))` pollen sites obtained from Neotoma for this analysis, `r length(unique(compiled.pollen$sitename[!is.na(pollen.frame$min)]))` sites had assemblages that met our criteria.  For these sites there were 18850 unique assemblages spanning the last 21kyr, approximately 90% of the total assemblages for the sites that met our criteria.  Samples excluded from analysis occur throughout the record.
+
+### Self and Landscape Dissimilarity:
+
 ```{r test, warning= FALSE, echo=FALSE, message=FALSE, fig.height=5, fig.width=5}
 
 cross.plot <- dcast(pollen.frame, 
                     list(.(site, age, direction), .(self)),
                     value.var = 'min', 
                     fun.aggregate = function(x)mean(x, na.rm=TRUE))
+clim.plot <- dcast(climate.frame, 
+                    list(.(site, age, direction), .(self)),
+                    value.var = 'min', 
+                    fun.aggregate = function(x)mean(x, na.rm=TRUE))
 
 colnames(cross.plot)[4:5] <- c('self', 'land')
+colnames(clim.plot)[4:5] <- c('self', 'land');
 
-cor.est <- cor.test(cross.plot$self, cross.plot$land, use = 'pairwise.complete.obs', method='spearman')
+full.plot <- data.frame(rbind(cross.plot, clim.plot),
+                        value = c(rep('pollen', nrow(cross.plot)),
+                                  rep('climate', nrow(clim.plot))))
 
-ggplot(cross.plot, aes(x = land, y = self)) + 
-  geom_point(alpha = 0.1) + 
-  stat_smooth(method='lm', size = 1.5, linetype = 2, color = 'black') +
-  scale_x_sqrt(expand=c(0,0), limits = c(0.01, 1)) + 
-  scale_y_sqrt(expand=c(0,0), limits = c(0.01, 1)) + 
+corp.est <- cor.test(cross.plot$self, cross.plot$land, use = 'pairwise.complete.obs', method='spearman')
+corc.est <- cor.test(clim.plot$self, clim.plot$land, use = 'pairwise.complete.obs', method='spearman')
+
+ggplot(full.plot, aes(y = land, x = self)) + 
+  geom_point(alpha = 0.05) + 
+  geom_density2d(color = 'lightgray') +
+  scale_x_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
+  scale_y_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
   geom_abline() + 
   coord_fixed(ratio=1) +
-  xlab('Landscape Dissimilarity') +
-  ylab('Site Turnover') +
+  ylab('Landscape Dissimilarity') +
+  xlab('Site Turnover') +
   theme_bw() +
   theme(axis.text = element_text(size = 12, family = 'serif'),
-        axis.title = element_text(size = 18, family = 'serif', face = 'bold'))
+        axis.title = element_text(size = 18, family = 'serif', face = 'bold')) +
+  facet_wrap(~value, scales='free')
 
-effectofdir<-anova(lm(land~self*direction, data = cross.plot), lm(land~self, data = cross.plot), test='F')
+#  Does it matter if we look into the past or the future?
+effectofdir<-anova(lm(land~self*direction, data = cross.plot), 
+                   lm(land~self, data = cross.plot), test='F')
 
+#  This is cool though, the difference between moving forward in time at the site
+#  level, vs moving forward at the landscape level.  There is much higer correlation
+#  within the self.
 cross.self <- dcast(cross.plot, site + age ~ direction, value.var = 'self', fun.aggregate=sum)
 cross.land <- dcast(cross.plot, site + age ~ direction, value.var = 'land', fun.aggregate=sum)
 
 ```
-**Figure X**. *Turnover and dissimilarity for individual pollen records from the Neotoma database, shows a relationship between the two variables, but also considerable noise.  There is no significant difference in the releationship when dissimilarities are calculated in the past or the future.  The best fit (dashed line) accounts for little variability ($r^2$ = 0.11).*
 
-Turnover within the core is correlated to landscape dissimilarity ($r_{s}$ = `r p(cor.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  There is no significant difference between this relationship for past dissimilarities and future dissimilarities ($F_{2}$=`p(effectofdir$F[2])`, p = `p(effectofdir$'Pr(>F)'[2])`).
+**Figure X**. *Turnover and dissimilarity for individual sites from the Neotoma database for both climate and vegetation, showing a relationship between the two variables, but also considerable noise.  There is no significant difference in the relationship when dissimilarities are calculated in the past or the future.  In particular it appears evident that site-level turnover is more closely related to landscape level turnover in the pollen data, wheras there is less of a relationship in the climate data.*
+
+Turnover within the core is correlated to landscape dissimilarity ($r_{s}$ = `r p(corp.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  There is no significant difference between this relationship for past dissimilarities and future dissimilarities ($F_{2}$=`r p(effectofdir$F[2])`, p = `r p(effectofdir$'Pr(>F)'[2])`).  The same plot, for climate in this case, shows 
+
+```{r}
+ggplot(full.plot, aes(y = land, x = self)) + 
+  geom_point(alpha = 0.05) + 
+  geom_density2d(color = 'lightgray') +
+  scale_x_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
+  scale_y_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
+  geom_abline() + 
+  coord_fixed(ratio=1) +
+  ylab('Landscape Dissimilarity') +
+  xlab('Site Turnover') +
+  theme_bw() +
+  theme(axis.text = element_text(size = 12, family = 'serif'),
+        axis.title = element_text(size = 18, family = 'serif', face = 'bold')) +
+  facet_wrap(~value, scales='free')
+
+```
 
 ```{r dissVsAge, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=9}
 
@@ -160,7 +226,7 @@ compiled.to.compiled <- match(pollen.frame$site, compiled.pollen$sitename)
 
 clim.in.pol <- pollen.frame$uniqueID[pollen.frame$uniqueID %in% climate.frame$uniqueID]
 
-full.frame <- data.frame(rbind(pollen.frame, climate.frame[clim.in.pol,]),
+full.frame <- data.frame(rbind(pollen.frame[clim.in.pol,], climate.frame[clim.in.pol,]),
                            lat = rep(compiled.pollen$lat[compiled.to.indiv], 2),
                            long = rep(compiled.pollen$long[compiled.to.indiv], 2),
                            age.model = rep(compiled.pollen$date.type[compiled.to.compiled], 2),
@@ -171,7 +237,7 @@ full.frame <- data.frame(rbind(pollen.frame, climate.frame[clim.in.pol,]),
                            variable = rep(c('pollen', 'climate'), each = nrow(pollen.frame)),
                            stringsAsFactors = FALSE)
 
-full.frame <- full.frame[!is.na(full.frame$min),]
+full.frame <- full.frame[!(is.na(full.frame$min) | full.frame$min == 0),]
 
 #  A number of sites have either Lake assignments (they are in the Great Lakes) or 
 #  NA assignments (they are on the coastline, and don't fall within the ecozone
@@ -187,36 +253,45 @@ for(i in 1:1500){
   #  This loop pulls out the 95% CI samples within 500 year time steps at 10 year intervals.
   #  This means that if a sample is outside the 95% ci for the 500 years within any 10 year
   #  timestep that covers the 500 year period it will be marked.
+  clim.cut <- age.class & full.frame$variable=='climate'
+  pol.cut  <- age.class & full.frame$variable=='pollen'
   
-  age.class <- pollen.frame$age %in% (i*10):((i*10)+500)
-  aa <- quantile(pollen.frame$min[age.class], probs=0.90, na.rm=TRUE)
-  pollen.frame$nf[age.class & pollen.frame$min > aa] <- 'red'
+  age.class <- full.frame$age %in% (i*10):((i*10)+500)
+  clim.quant <- quantile(full.frame$min[clim.cut], 
+                         probs=0.90, na.rm=TRUE)
+  pol.quant <- quantile(full.frame$min[pol.cut],
+                         probs=0.90, na.rm=TRUE)
+  
+  full.frame$nf[clim.cut & full.frame$min > clim.quant] <- 'red'
+  full.frame$nf[pol.cut & full.frame$min > pol.quant] <- 'red'
 }
 
-what <- pollen.frame$domain %in% c('HUMID TEMPERATE DOMAIN') &
-  !pollen.frame$age.model %in% c('Radiocarbon years BP')
+what <- full.frame$domain %in% c('HUMID TEMPERATE DOMAIN') &
+  !full.frame$age.model %in% c('Radiocarbon years BP')
 
-pollen.frame$self <- factor(pollen.frame$self, levels= c('Turnover', 'Transient Novelty'))
+full.frame$self <- factor(full.frame$self, 
+                          levels = c(TRUE, FALSE), 
+                          labels= c('Turnover', 'Landscape Change'))
 
-curve <- ggplot(aes(x = age, y = min), data = pollen.frame[what,]) + 
+curve <- ggplot(aes(x = age, y = min), data = full.frame[what,]) + 
   geom_point(aes(color = nf)) +
   #scale_color_identity() +
   #geom_smooth(formula = y ~ s(x, k = 40), method='gam', family = Gamma, size = 2) +
   #geom_smooth(formula = y ~ s(x, k = 40), 
   #            method='gam', family = Gamma, size = 1, color = 'black', linetype = 2) +
   scale_x_continuous(limits = c(0, 15000), expand=c(0,0)) +
-  scale_y_continuous(limits = c(0, .5), expand=c(0,0)) +
+  scale_y_sqrt(expand=c(0,0)) +
   theme_bw() + 
   theme(axis.title = element_text(family='serif', face='italic', size=20),
         axis.text = element_text(family='serif', size=16),
         legend.position = 'none') +
   xlab('Radiocarbon Years Before Present') +
   ylab('Landscape Dissimilarity') +
-  facet_wrap(~division + self, ncol = 2)
+  facet_wrap(~variable + self, ncol = 2, scale='free')
 
 points <- ggplot(data = data.frame(map), aes(long, lat)) + 
   geom_path(aes(group=group), color='black') +
-  geom_point(data = pollen.frame[pollen.frame$min > quantile(pollen.frame$min, 0.95) & what, ], 
+  geom_point(data = pollen.frame[pollen.frame$min > quantile(pollen.frame$min, 0.95, na.rm=TRUE) & what, ], 
              aes(x = long, y = lat, size = min*10), alpha=0.2, color = 'red') +
   scale_size_identity() +
   coord_map(xlim=c(-100, -59), ylim=c(21, 50)) + theme_bw()
@@ -224,26 +299,31 @@ points <- ggplot(data = data.frame(map), aes(long, lat)) +
 curve
 
 ```
+
 **Figure 3**. *Turnover through time in the Neotoma database.*
 
-```{r}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 
-cross.plot <- dcast(full.frame, 
-                    list(.(site, age), .(variable)),
+cross.plot <- dcast(full.frame[full.frame$direction == 'past',],
+                    list(.(site, age, self), .(variable)),
                     value.var = 'min', 
                     fun.aggregate = function(x)mean(x, na.rm=TRUE))
 
-ggplot(cross.plot, aes(x = climate, y = pollen)) + 
-  geom_point(alpha=0.1) + scale_x_sqrt() + scale_y_sqrt()
-
+ggplot(cross.plot, aes(x = climate, y = pollen, color = self)) + 
+  geom_point(alpha=0.1) +
+  stat_density2d() + scale_x_sqrt() + scale_y_sqrt() +
+  theme_bw()
 
 ```
 
-```{r SignifModels}
+**Figure X.** *Relationship between landscape and self turnover appears to show little relationship between climate and vegetation turnover.*
+
+```{r SignifModels, echo=FALSE, warning=FALSE, error=FALSE}
 
 #  This is some basic hypothesis testing.  We're interested in knowing how much these change.
-inclusion <- full.frame$age < 15000 & full.frame$age > -50 &
-  full.frame$min > 0
+inclusion <- full.frame$age < 15000 & 
+             full.frame$age > -50 &
+             full.frame$min > 0
 
 full.frame$byVal <- factor(paste(full.frame$self, full.frame$variable))
 
@@ -253,13 +333,13 @@ model0 <- gam(log(min,10) ~ 1, family = gaussian,
 model1 <- gam(log(min,10) ~ s(age, by = byVal), family = gaussian, 
               data = full.frame[inclusion, ])
 
-model1.500 <- gam(log(self,10) ~ s(age, k = 40), family = gaussian, 
+model1.500 <- gam(log(min,10) ~ s(age, k = 40), family = gaussian, 
                   data = full.frame[inclusion, ])
 
-model2.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
+model2.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
                   data = full.frame[inclusion, ])
 
-model3.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(division)), 
+model3.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(division)), 
                   family = gaussian, 
                   data = full.frame[inclusion, ])
 
