Added spatial analysis, using `t.tests` to compare locations of high novelty or refugium to the rest of the sets.

--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -10,7 +10,7 @@ Abstract
 
 Introduction
 ------------------------
-Our investigation of non-analogue vegetation, both in the past and in the future is tied to differences from modern conditions (Williams and Jackson, 2007).  A major concern with no-analogue climate in the future (ref) is the development of forest communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. Non-analogue conditions provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
+Investigation of non-analogue vegetation, both in the past and in the future are tied to differences from modern conditions (Williams and Jackson, 2007; Gill et al.).  A major concern with no-analogue climate in the future (ref) is the development of communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. Non-analogue conditions provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
 
 Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
 
@@ -66,11 +66,11 @@ Transient novelty  | The dissimilarity measure between a pollen assemblage and a
 Site turnover      | The dissimilarity measure between a pollen assemblage and all pollen assemblages from the same site between 250 and 750 years older.
 Persistence        | The dissimilarity measure between a pollen assemblage and future assemblages, between 250 and 750 years younger.
 
-Turnover within a core just tells you how different vegetation at a single site is from one time period is to the next, however it may be deceptively high, in regions where there is high spatial heterogeneity, or large shifts between pioneer and climax vegetation associations it might be possible to see large shifts in turnover, but little regional change.
+Turnover within a core tells us how different vegetation, inferred from pollen, at a single site is from one time period is to the next.  Turnover can tell us much about change at a site, but it may be deceptively high, for example, in regions where there is high spatial heterogeneity, or large taxonomic shifts between pioneer and climax vegetation associations.  In these cases it might be possible to see large shifts in turnover, under conditions with relatively little regional change.
 
-Landscape turnover has not been previously used as a metric of dissimilarity.  It is a measure of how different an assemblage at one time period is to all pollen assemblages within a previous time period.  In this sense, it is an estimate of how novel an ecosystem is with respect to all ecosystems that previously occupied the landscape.  In a sense it is $d_m$ turned on its head.
+Landscape turnover has not been previously used as a metric of dissimilarity.  It is a measure of how different an assemblage at one time period is to all pollen assemblages within a previous time period.  In the cases described above, that may result in high site level turnover in heterogeneous landscapes, the landscape dissimilarity would be relatively low, since close analogues to early or later seral stages should be present.  In this sense, landscape dissimilarity helps us resolve of how novel an ecosystem is with respect to all ecosystems that occupied the landscape within some earlier time frame.  It is thus complimentary, but not parallel to site-level turnover.
 
-To assist in this endevour, we examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.  The conceptual framework suggests that we were looking at landscape level turnover, not site turnover.  While site-level turnover is a commonly used metric in paleoecological analysis, it is hampered by its sensitivity to stochastic effects.  Large scale changes in vegetation at a single site might not reflect the kinds of broad scale community change we expect to see under conditions of future climate change.  As such, comparing dissimilarity at a site to changes at a number of sites across the continent provides a better metric of landscape-scale dissimilarity.
+We examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.  The conceptual framework suggests that we were looking at landscape level turnover, not site turnover.  While site-level turnover is a commonly used metric in paleoecological analysis, it is hampered by its sensitivity to stochastic effects.  Large scale changes in vegetation at a single site might not reflect the kinds of broad scale community change we expect to see under conditions of future climate change.  As such, comparing dissimilarity at a site to changes at a number of sites across the continent provides a better metric of landscape-scale dissimilarity.
 
 ![Alt text](/HandMadeFigures/ConceptualPlot.png)
 
