*  Modified the site table.  Now identifies sites by the number of samples in each class. *  Added blob to help rendering, along with new bib file * style templates.

--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -1,3 +1,14 @@
+---
+title: "No analogue paper"
+author: "Simon Goring *et al*."
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output:
+pdf_document:
+pandoc_args: "-H margins.sty"
+bibliography: non_anlogue.bib
+csl: harvard1.csl
+---
+
 No-Analogues in North American Pollen Space
 ========================================================
 
